# agentic-engineering-standard

./: .gitignore  AES-v2-ECC-Derived-Additions.md  CHANGELOG.md  CLAUDE.md  GETTING-STARTED.md  LICENSE  README.ja.md  README.md
cli/: PUBLISHING.md  README.md  aes.spec  pyproject.toml
cli/aes/: __init__.py  __main__.py  analyzer.py  config.py  domains.py  frameworks.py  global_config.py  mcp_server.py  migrations.py  registry.py  validator.py
cli/aes/commands/: bom.py  init.py  inspect.py  install.py  publish.py  search.py  status.py  sync.py  upgrade.py  validate.py
cli/aes/i18n/: __init__.py  _messages.py  domains_ja.py  ja.py
cli/aes/scaffold/: agent.yaml.jinja  agentignore.jinja  bom.yaml.jinja  instructions.md.jinja  local.example.yaml.jinja  local.yaml.jinja  memory_command.md.jinja  operations.md.jinja  orchestrator.md.jinja  permissions.yaml.jinja  setup.md.jinja  skill.md.jinja  skill.yaml.jinja  workflow.yaml.jinja  workflow_command.md.jinja
cli/aes/scaffold/ja/: instructions.md.jinja  memory_command.md.jinja  operations.md.jinja  orchestrator.md.jinja  setup.md.jinja  skill.md.jinja  workflow_command.md.jinja
cli/aes/schemas/: agent.schema.json  learning-config.schema.json  permissions.schema.json
cli/aes/targets/: __init__.py  _base.py  _composer.py  claude.py  codex.py  copilot.py  cursor.py  openclaw.py  windsurf.py
cli/tests/: conftest.py  test_analyzer.py  test_bom.py  test_codex_target.py  test_frameworks.py  test_init.py  test_inspect.py  test_install.py  test_learning_validation.py  test_lifecycle_validation.py  test_mcp_server.py  test_openclaw_target.py  test_project_locale.py  test_publish.py  test_registry.py  test_rules_validation.py  test_search.py  test_status.py  test_sync.py  test_upgrade.py  test_validate.py
examples/devops/.agent/: agent.yaml  instructions.md
examples/ml-pipeline/.agent/: agent.yaml  bom.yaml  instructions.md  permissions.yaml
schemas/: agent.schema.json  bom.schema.json  decision-record.schema.json  instinct.schema.json  lifecycle.schema.json  permissions.schema.json  registry.schema.json  rules-config.schema.json  skill.schema.json  workflow.schema.json
scripts/: bump-version.py
server/: Dockerfile  Makefile  README.md  auth.go  auth_test.go  config.go  go.mod  handler.go  handler_test.go  main.go  middleware.go  storage.go  storage_test.go  validation.go  validation_test.go
server/deploy/: aes-registry.service  nginx.conf  setup.sh
server/docs/: architecture.md  user-guide.md
spec/: 01-manifest.md  02-instructions.md  03-skills.md  04-registries.md  05-workflows.md  06-permissions.md  07-memory.md  08-commands.md  09-sharing.md  10-agentignore.md  11-bom.md  12-decision-records.md  13-lifecycle.md  14-learning.md  15-rules.md  README.md
web/: .gitignore  Makefile  config.go  db.go  db_test.go  github.go  go.mod  handlers.go  handlers_test.go  i18n.go  main.go  middleware.go  middleware_test.go  models.go  tokens.go
web/static/: style.css
web/templates/: dashboard.html  error.html  examples.html  how-it-works.html  index.html  registry.html  token_created.html
(+154 files in other folders)
