[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aes-cli"
version = "0.2.0"
description = "CLI tool for the Agentic Engineering Standard"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Hiro"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["agentic", "ai", "engineering", "standard", "cli"]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jsonschema>=4.17",
    "jinja2>=3.1",
    "rich>=13.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
aes = "aes.__main__:cli"
aes-mcp = "aes.mcp_server:main"

[project.urls]
Homepage = "https://aes-official.com"
Repository = "https://github.com/user-1221/agentic-engineering-standard"
Documentation = "https://github.com/user-1221/agentic-engineering-standard/tree/main/spec"

[tool.setuptools.package-data]
aes = ["scaffold/*.jinja", "schemas/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
